# fullwave25

./: .bumpversion.toml  .dockerignore  .gitignore  CITATION.cff  Dockerfile  Makefile  README.md  pyproject.toml  ruff.toml
.github/workflows/: python-package.yml
examples/convex_transducer/: __init__.py  convex_transducer_abdominal_wall.py
examples/linear_transducer/: full_synthetic_aperture.py  fully_synthetic_aperture.py  linear_transducer.py  linear_transducer_abdominal_wall.py  linear_transducer_abdominal_wall_with_air.ipynb  linear_transducer_abdominal_wall_with_air.py  linear_transducer_animation.py  linear_transducer_focused_animation.py  plane_wave_compounding.py
examples/medium_builder/: medium_builder_abdominal_example.py  medium_builder_example.ipynb  medium_builder_example.py  medium_builder_example_3d.py
examples/simple_plane_wave/: example_simple_plane_wave.ipynb  example_simple_plane_wave_air.ipynb  simple_plane_wave.py  simple_plane_wave_air.py
examples/wave_3d/: simple_plane_wave_3d.py  simple_plane_wave_3d_with_air.py
fullwave/: __init__.py  grid.py  medium.py  sensor.py  source.py  transducer.py
fullwave/medium_builder/: medium_builder.py
fullwave/medium_builder/presets/: domain_abdominal_wall.py  domain_background.py  domain_scatterer.py  domain_simple.py
fullwave/solver/: cuda_utils.py  input_file_writer.py  launcher.py  pml_builder.py  solver.py  utils.py
fullwave/solver/bins/exponential_attenuation/gpu/2d/: fullwave2_2d_exponential_attenuation_gpu_sm_100_cuda129  fullwave2_2d_exponential_attenuation_gpu_sm_101_cuda129  fullwave2_2d_exponential_attenuation_gpu_sm_120_cuda129  fullwave2_2d_exponential_attenuation_gpu_sm_61_cuda118  fullwave2_2d_exponential_attenuation_gpu_sm_61_cuda124  fullwave2_2d_exponential_attenuation_gpu_sm_61_cuda126  fullwave2_2d_exponential_attenuation_gpu_sm_61_cuda129  fullwave2_2d_exponential_attenuation_gpu_sm_70_cuda118  fullwave2_2d_exponential_attenuation_gpu_sm_70_cuda124  fullwave2_2d_exponential_attenuation_gpu_sm_70_cuda126  (+21 more)
fullwave/utils/: __init__.py  memory_tempfile.py  plot_utils.py  relaxation_parameters.py  scatterer.py  signal_process.py
tests/: test_grid.py  test_init.py  test_medium.py  test_sensor.py  test_source.py  test_transducer.py
tests/medium_builder/: test_domain.py  test_medium_builder.py
tests/medium_builder/presets/: test_domain_background.py
tests/solver/: test_input_file_writer.py  test_launcher.py  test_solver.py
tests/utils/: test_relaxation_parameters.py  test_scatterer.py
(+310 files in other folders)
