[project]
name = "fullwave25"
dynamic = ["version"]
description = ""
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "dataclasses>=0.8",
    "matplotlib>=3.10.1",
    "numpy>=2.2.3",
    "scipy>=1.15.2",
    "tqdm>=4.67.1",
    "opencv-python>=4.11.0.86",

]
authors = [{ name = "Masashi Sode", email = "masashi.sode@gmail.com" }]

[tool.hatch.version]
path = "fullwave/__init__.py"

[project.optional-dependencies]
test = ["pytest", "coverage==7.6.12"]
dev = ["pre-commit==4.1.0", "pytest>=8.3.5", "ruff>=0.12.9"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = ["pre-commit>=4.1.0", "pytest>=8.3.5", "ruff>=0.12.9"]

[tool.hatch.build.targets.wheel]
packages = ["fullwave", "fullwave.utils"]
