[project]
name = "fullwave25"
dynamic = ["version"]
description = ""
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "matplotlib>=3.10.1",
    "numpy>=2.2.3",
    "scipy>=1.15.2",
    "tqdm>=4.67.1",
    "opencv-python>=4.11.0.86",
]
authors = [{ name = "Masashi Sode", email = "masashi.sode@gmail.com" }]

[tool.hatch.version]
path = "fullwave/__init__.py"

[project.optional-dependencies] # --extra
test = ["pytest", "coverage==7.6.12"]
dev = ["pre-commit==4.1.0", "pytest>=8.3.5", "ruff>=0.12.9"]
examples = ["jupyter>=1.0.0", "ipykernel>=6.28.0"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = ["pre-commit>=4.1.0", "pytest>=8.3.5", "ruff>=0.12.9"]

[tool.hatch.build.targets.wheel]
packages = ["fullwave", "fullwave.utils"]

[tool.hatch.build]
exclude = ["tests", "figs", "examples", ".vscode", ".github"]
